<resources>
    <string name="app_name">Practica 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seating">Asientos</string>
    <string name="price">Precio</string>
    <string name="colors">Colores</string>
    <string name="wheels">Llantas</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña? Clic aquí</string>
    <string name="detail">Detalle de auto</string>
    <string name="logout">Cerrar sesión</string>
    <string name="main_title">Autos disponibles</string>
</resources>